# codeslayer.navigation-plugin

./: Makefile.am  Makefile.in  configure  configure.ac  navigation.codeslayer-plugin.in
.codeslayer/: autotools.conf  ctags.conf
src/: Makefile.am  Makefile.in  navigation-engine.c  navigation-engine.h  navigation-menu.c  navigation-menu.h  navigation-node.c  navigation-node.h  navigation-pane.c  navigation-pane.h  navigation-path.c  navigation-path.h  navigation-plugin.c  navigation-rank.c  navigation-rank.h
