lib_LTLIBRARIES = libnavigationcodeslayerplugin.la

libnavigationcodeslayerplugin_la_SOURCES = \
    navigation-node.h \
    navigation-node.c \
    navigation-engine.h \
    navigation-engine.c \
    navigation-menu.h \
    navigation-menu.c \
    navigation-plugin.c

libnavigationcodeslayerplugin_la_CPPFLAGS = $(NAVIGATIONCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
